# WDFitSpec

MakeTGM/: MakeTGM.py  MakeUlyssSpectFromFLM.py
ulyss/: README  configure  configure.in  makefile
ulyss/dep/: GDL.pro  GDLfsc_color.pro  fsc_color.pro  histoplot.pro  mpfit.pro  pro2html.pro
ulyss/pgm/: bvls_lh.pro  bvls_ps.pro  gd191model.txt  idl_hist_121816.pro  mregress.pro  output.fits  output.res  slices.pro  tickslog.pro  uly_chimap.pro  uly_chimap_init.pro  uly_chimap_plot.pro  uly_chimap_read.pro  uly_cmp_name.pro  uly_fit.pro  uly_fit_init.pro  uly_fit_lin.pro  uly_html_help.pro  uly_line.pro  uly_lsf.pro  uly_lsf_plot.pro  uly_lsf_smooth.pro  uly_plot_init.pro  uly_plot_padpixelrange.pro  uly_plot_save.pro  uly_solut_splot.pro  uly_solut_sread.pro  uly_solut_swrite.pro  uly_solut_tplot.pro  uly_solut_tprint.pro  uly_solut_tread.pro  uly_solut_twrite.pro  uly_spect_alloc.pro  uly_spect_extract.pro  uly_spect_get.pro  uly_spect_linrebin.pro  uly_spect_logrebin.pro  uly_spect_losvdconvol.pro  uly_spect_lsfconvol.pro  uly_spect_plot.pro  (+24 more)
ulyss/tuto/: path.pro  tuto.pro  tuto_base_01.pro  tuto_base_02.pro  tuto_base_03.pro  tuto_base_04.pro  tuto_base_05.pro  tuto_base_06.pro  tuto_base_07.pro  tuto_base_08.pro  tuto_base_09.pro  tuto_base_10.pro  tuto_chi_01.pro  tuto_chi_02.pro  tuto_chi_03.pro  tuto_chi_04.pro  tuto_chi_05.pro  tuto_chi_06.pro  tuto_chi_07.pro  tuto_chi_08.pro  tuto_cmp_01.pro  tuto_cmp_02.pro  tuto_cmp_03.pro  tuto_plot_01.pro  tuto_plot_02.pro  tuto_plot_03.pro  tuto_plot_04.pro  tuto_plot_05.pro  tuto_plot_06.pro  tuto_plot_07.pro  tuto_plot_08.pro  tuto_plot_09.pro  tuto_plot_10.pro  tuto_plot_11.pro  tuto_power.pro  tuto_ssp_01.pro  tuto_ssp_02.pro  tuto_ssp_03.pro  tuto_ssp_04.pro  tuto_ssp_05.pro  (+6 more)
